--- a/bin/templates/webinars/social-media.hbs
+++ b/bin/templates/webinars/social-media.hbs
@@ -249,7 +249,7 @@ footer p {
       </a>
     </div>
     <div class="menu-item title-page">
-      <a href="https://fiware.org/webinars">FIWARE Webinars</a>
+      <a href="https://fiware.org/webinars">Webinars</a>
     </div>
     <div class="menu-item">
     </div>
